@@ -6,6 +6,9 @@
 	* sfcBroker.c:
 	Fixed [ 2138163 ] sfcb: Wrong PID when running as daemon
 	(patch by Ingo van Lil)
+
+	* cimcClientSfcbLocal.c, msgqueue.c:
+	Fixed [ 2049872 ] "--- Warning: fd is closed" message from binary intf app
 	
 2008-09-10 Chris Buccella  <buccella@linux.vnet.ibm.com>
 
